refactor: migrate Collections/Arrays.asList to Java 9+ collection factories (#1717)
* refactor: migrate Collections/Arrays.asList to Java 9+ factory methods

Motivation:
Java 9+ provides List.of(), Map.of(), Set.of() factory methods that are
more concise and return truly immutable collections.

Modification:
Replace Arrays.asList() with List.of() across 48 files (212 occurrences).
Replace Collections.emptyList/Map/Set() and singletonList() with
List/Map/Set.of() across 12 files. Update imports accordingly.

Result:
Cleaner code using Java 17 immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization

* fix: revert Collections.emptySet/emptyMap/emptyList to original API

Motivation:
Review feedback: prefer Collections.emptyMap(), Collections.emptySet(),
Collections.emptyList() over Map.of(), Set.of(), List.of() for empty
collections since they use well-known immutable singleton APIs.

Modification:
Revert empty collection conversions while keeping non-empty
Arrays.asList -> List.of and Collections.singletonList -> List.of
conversions.

Result:
Empty collections use the established Collections.empty* API.

* style: apply javafmt to fix code style check failures

Apply javafmt to 8 Java source files across csv, google-cloud-bigquery,
hdfs, pravega, reference, and xml modules that were failing code style
check.

* fix: restore missing java.util.Arrays import in HdfsWriterTest

The Arrays import was accidentally removed during the Arrays.asList
migration, but Arrays::stream is still used in the test.