@@ -64,7 +64,7 @@ public class JmsAckConnectorsTest {
   }
 
   private List<JmsTextMessage> createTestMessageList() {
-    List<Integer> intsIn = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+    List<Integer> intsIn = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
     List<JmsTextMessage> msgsIn = new ArrayList<>();
     for (Integer n : intsIn) {
       final Map<String, Object> map = new HashMap<>();
@@ -86,7 +86,7 @@ public class JmsAckConnectorsTest {
               JmsProducer.textSink(
                   JmsProducerSettings.create(producerConfig, connectionFactory).withQueue("test"));
 
-          List<String> in = Arrays.asList("a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k");
+          List<String> in = List.of("a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k");
           Source.from(in).runWith(jmsSink, system);
 
           Source<AckEnvelope, JmsConsumerControl> jmsSource =
@@ -301,7 +301,7 @@ public class JmsAckConnectorsTest {
   public void publishAndConsumeTopic() throws Exception {
     withConnectionFactory(
         connectionFactory -> {
-          List<String> in = Arrays.asList("a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k");
+          List<String> in = List.of("a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k");
           List<String> inNumbers =
               IntStream.range(0, 10).boxed().map(String::valueOf).collect(Collectors.toList());
 
